<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="intro_body">It is a great pleasure to meet you!</string>
    <string name="fabDescribe">Add new shoes</string>
    <string name="intrstruction_intro">Organizing\nYour Shoes</string>
    <string name="instruction_body">simply use the add button to enter new shoe details!</string>
    <string name="buttonStart">Start!</string>
    <string name="nameField">Enter shoe name here</string>
    <string name="companyField">Enter compnay name</string>
    <string name="sizeField">Enter the shoe size</string>
    <string name="descriptionField">Description and features</string>
    <string name="shoeName">Name</string>
    <string name="shoeCompany">Company</string>
    <string name="shoeSize">Size</string>
    <string name="shoeDescription">Description</string>
    <string name="buttonSave">Save</string>
    <string name="buttonCancel">Cancel</string>
    <string name="ok">ok</string>
</resources>
